# quickdeck

./: .gitignore  DOCKER_DEPENDENCY_SOLUTION.md  Makefile  README.md  docker-compose.dev-base.yml  docker-compose.prod.yml  docker-compose.yml  env.example  package-lock.json
backend/: .env.example  Dockerfile  alembic.ini  env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 01e1bb988d83_change_node_type_and_step_type_to_string.py  1091fef1b7a5_add_workflow_output_type.py  2c8bc1521fc8_merge_output_dataset_and_node_step_type.py  4812a19947a8_change_option_type_to_string.py  67033bf17ade_remove_workflow_output_type.py  784443dc2b49_add_credentials.py  7e58d7f344f2_init.py  7e618fbc0d4d_fix_node_type_enum_to_string.py  a56ccfbb342a_add_system_config_table.py  add_job_executions.py  add_json_schema_to_options.py  add_output_dataset_to_job_executions.py  add_project_users_table.py  change_execution_enums_to_string.py  dc3dcab5901a_fix_step_type_enum_to_string_force.py  f482bd2f67d8_merge_heads.py  f4a5d91fcd45_add_curl_step_type.py  f687a9e66d8b_add_project_name_description.py  fix_optiontypeenum_case.py  update_option_model.py
backend/app/: auth.py  config.py  database.py  init_db.py  main.py  models.py  schemas.py
backend/app/executors/: __init__.py  command.py  curl.py  factory.py  mysql.py  python_script.py  shell_script.py
backend/app/routers/: auth.py  credentials.py  executions.py  jobs.py  projects.py  system_config.py  upload.py  users.py
backend/script/: demo-oss.py  demo-python.py  mock_credential.py  yuce-ldl-upload.py
(+50 files in other folders)
